--- a/task_1_decathlon/analysis/decathlon_analysis.Rmd
+++ b/task_1_decathlon/analysis/decathlon_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Dirty Data Project Task 1 Decathlon"
+title: "Dirty Data Project - Task 1 Decathlon"
 output:
   html_document:
     toc: yes
@@ -9,7 +9,35 @@ output:
     df_print: paged
 ---
 
-why did i chose this task intro to the data
+## Introduction
+
+The decathlon dataset contains the results from each of the 10 events in
+the decathlon. The data covers two competitions - the 2004 Olympic Games
+and the 2004 Decastar competition. The data also includes the place the
+athlete finished ("rank") and their total points. Out of the 13 athletes
+in the Decastar competition only 3 did not compete in the Olympics that
+year. The Olympic field consisted of 28 athletes.
+
+## Assumptions
+
+Assumptions have been made which are specific to the questions asked.
+These are detailed below as part of the relevant answers.
+
+## Cleaning
+
+The dataset was cleaned using the "decathlon_cleaning_script.R" file.
+The main steps were:
+
+-   cleaning the column names
+-   converting the row names to a column for the athletes name
+-   correcting spelling of "javeline" to "javelin"
+-   converting athlete names to lowercase
+-   tidying competition names
+
+As part of the cleaning the data was checked for NAs, NULLs and values
+outwith expected ranges. None were found, the dataset is complete.
+
+## Load libraries and import data
 
 ```{r}
 library(tidyverse)
@@ -22,7 +50,9 @@ here::here()
 decathlon <- read_csv(here("clean_data/clean_decathlon_data.csv"))
 ```
 
-1.  Who had the longest long jump seen in the data?
+## Question 1
+
+**Who had the longest long jump seen in the data?**
 
 ```{r}
 decathlon %>% 
@@ -33,7 +63,9 @@ Bryan Clay from the US had the longest result for the long jump from the
 data. This jump was at the 2004 Olympic Games and was a personal best at
 the time. Clay went on to win the silver medal in this competition.
 
-2.  What was the average 100m time in each competition?
+## Question 2
+
+**What was the average 100m time in each competition?**
 
 ```{r}
 decathlon %>% 
@@ -47,7 +79,9 @@ higher profile competition and athletes design four year training
 programs around the Olympic schedule to ensure they peak for this
 competition.
 
-3.  Who had the highest total points across both competitions?
+## Question 3
+
+**Who had the highest total points across both competitions?**
 
 Assumption - highest total points across both competitions means the
 points are summed for each athlete (that competed in both competitions)
@@ -62,17 +96,17 @@ decathlon %>%
 
 Roman Sebrle, an athlete from the Czech Republic, has the highest total
 points across both competitions. He won the 2004 Olympics and the 2004
-Decastar event which is where this data comes from.
+Decastar event so would have the highest points total for each event individually as well.
 
-4.  What was the shot-put scores for the top three competitors in each
-    competition?
+## Question 4
 
-Assumption - the question means the shot-put distance since it is not
-possible to calculate the "shot-put scores" from this data.
+**What was the shot-put scores for the top three competitors in each competition?**
+
+Assumption - the question means the shot-put distance since it is not possible to calculate the "shot-put scores" from this data.
 
 ```{r}
 decathlon %>% 
-# Slicing the 6 lowest numbers in rank column to catch the 1, 2, 3 ranked positions in each competition  
+# Slicing the 6 lowest numbers in rank column to catch the 1, 2, 3 ranked positions in each competition. There are no ties so don't need to worry about that  
   slice_min(rank, n = 6) %>% 
   select(athlete, shot_put, rank, competition) %>% 
   arrange(competition, rank)
@@ -83,8 +117,9 @@ The first, second and third places in both competitions were taken by
 the same men in the same order. The shot-put distances in the Olympics
 are all higher than those thrown in the Decastar competition.
 
-5.  What was the average points for competitors who ran the 400m in less
-    than 50 seconds vs. those than ran 400m in more than 50 seconds?
+## Question 5
+
+**What was the average points for competitors who ran the 400m in less than 50 seconds vs. those than ran 400m in more than 50 seconds?**
 
 ```{r}
 # A quick check showed no one ran exactly 50 seconds so all athletes will be caught by >50 and <50
@@ -103,6 +138,8 @@ tibble(
   "x400m_speed" = c("less than 50 sec", "more than 50 sec"),
   "average_points" = c(avg_points_slower_athletes, avg_points_faster_athletes)
 )
+
+# Would have liked to conduct this analysis in one piece of code and without creating the variables.
 ```
 
 The athletes who are slower at the 400 m have a lower points average
